# goal

./: .aider.chat.history.md  .aider.input.history  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  TODO.md  Taskfile.yml  claude-taking-longer-than-usual.webm  goal.yaml  planfile.yaml  project.functions.toon  project.sh  pyproject.toml  renovate.json  test_version_validation.py  tree.txt
.aider/caches/: model_prices_and_context_window.json  openrouter_models.json
.github/: dependabot.yml
.github/workflows/: ci.yml  dependencies.yml
docs/: README.md  ci-cd.md  commands.md  configuration.md  enhanced-summary.md  examples.md  faq.md  hooks.md  installation.md  integration-guide.md  markdown-output-guide.md  markdown-output.md  pyqual.md  quickstart.md  registries.md  strategies.md  troubleshooting.md  usage.md  user-config.md
examples/: README.md  markdown-demo.sh  run_all_examples.py
examples/advanced-workflows/: README.md  feature-branch.md  hotfix-workflow.md
examples/api-usage/: 01_basic_api.py  02_git_operations.py  03_commit_generation.py  04_version_validation.py  05_programmatic_workflow.py  README.md  test_integration.py
examples/configurations/: goal-yaml-examples.md
examples/custom-hooks/: README.md  post-commit.py  pre-commit.py  pre-publish.py
examples/docker-integration/: README.md
examples/dotnet-project/: Calculator.cs  CalculatorTests.cs  GoalExample.csproj  README.md
examples/enhanced-summary/: README.md  before-after.md  config-example.yaml  sample-output.md
examples/git-hooks/: install.sh  prepare-commit-msg
examples/github-actions/.github/workflows/: release.yml
examples/gitlab-ci/: README.md
examples/go-project/: README.md  go.mod  main.go
examples/java-project/: README.md  pom.xml
examples/java-project/src/main/java/com/example/: Main.java
examples/java-project/src/test/java/com/example/: MainTest.java
examples/license-management/: README.md
examples/makefile/: Makefile
examples/monorepo/: README.md
examples/multi-author/: README.md
examples/my-new-project/src/my-new-project/: __init__.py
examples/nodejs-app/: package.json
examples/performance/: README.md
examples/php-project/: README.md  composer.json
examples/php-project/src/: Example.php
examples/python-package/: pyproject.toml
examples/ruby-project/: README.md  goal_example.gemspec
examples/rust-crate/: Cargo.toml
examples/template-generator/: README.md  generate.py
examples/testing/: 01_duplicate_call_detection.py  02_project_detection_tests.py  03_advanced_mocking.py  04_debugging_diagnostics.py  README.md
examples/testing-guide/: README.md
examples/validation/: README.md  run_all_validation.py  test_api_signatures.py  test_imports.py  test_readme_consistency.py  test_syntax_check.py
examples/webhooks/: README.md  discord-webhook.py  slack-webhook.py
examples/wizard-setup/: README.md
goal/: __init__.py  __main__.py  changelog.py  cli.py  cli.py.bak  cli_helpers.py  commit_generator.py  commit_generator.py.bak  config.py  deep_analyzer.py  enhanced_summary.py  enhanced_summary.py.bak  formatter.py  git_ops.py  package_managers.py  project_bootstrap.py  project_doctor.py  smart_commit.py  user_config.py  version_validation.py
goal-2.1.68/: PKG-INFO  pyproject.toml
goal-2.1.68/goal/: __main__.py  cli.py  enhanced_summary.py  git_ops.py  project_bootstrap.py  project_doctor.py
goal-2.1.68/tests/: test_clone_repo.py  test_version_sync.py
goal/authors/: __init__.py  manager.py  utils.py
goal/bootstrap/: installer.py
goal/cli/: __init__.py  authors_cmd.py  commit_cmd.py  config_cmd.py  config_validate_cmd.py  doctor_cmd.py  hooks_cmd.py  license_cmd.py  postcommit_cmd.py  publish.py  publish_cmd.py  push_cmd.py  recover_cmd.py  tests.py  utils_cmd.py  validation_cmd.py  version.py  version_new.py  version_sync.py  version_types.py  version_utils.py  wizard_cmd.py
goal/config/: __init__.py  constants.py  manager.py  validation.py
goal/doctor/: __init__.py  core.py  dotnet.py  go.py  java.py  logging.py  models.py  nodejs.py  php.py  python.py  ruby.py  rust.py  todo.py
goal/generator/: __init__.py  analyzer.py  generator.py  git_ops.py
goal/hooks/: config.py  manager.py
goal/license/: __init__.py  manager.py  spdx.py
goal/postcommit/: actions.py  manager.py
goal/push/: __init__.py  commands.py  core.py
goal/push/stages/: __init__.py  changelog.py  commit.py  dry_run.py  publish.py  push_remote.py  tag.py  test.py  version.py
goal/recovery/: manager.py  strategies.py
goal/smart_commit/: __init__.py  abstraction.py  generator.py
goal/summary/: __init__.py  generator.py  quality_filter.py  validator.py
goal/validation/: manager.py  rules.py
goal/validators/: __init__.py  file_validator.py  tokens.py
integration/: Dockerfile  run_docker_matrix.sh  run_matrix.sh
project/: README.md  analysis.toon  analysis.toon.yaml  calls.mmd  calls.toon.yaml  calls.yaml  compact_flow.mmd  context.md  dashboard.html  duplication.toon.yaml  evolution.toon  evolution.toon.yaml  flow.mmd  flow.toon  index.html  map.toon  map.toon.yaml  project.toon  project.toon.yaml  project.yaml  prompt.txt  validation.toon.yaml
tests/: .gitignore  test_cli_options.py  test_cli_tests_runner.py  test_clone_repo.py  test_installers_e2e.py  test_project_bootstrap.py  test_project_doctor.py  test_push_e2e.py  test_version_sync.py  test_version_validation.py
