[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "goal"
version = "2.1.63"
description = "Goal - Automated git push with enterprise-grade commit intelligence, smart conventional commit generation based on deep code analysis, and interactive release workflow management."
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "Tom Sapletta", email = "tom@sapletta.com"},
]
keywords = ["git", "automation", "commit", "changelog", "versioning", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
nfo = [
    "nfo>=0.3.0",
]
dev = [
    "pytest>=7.0.0",
    "build",
    "twine",
]

[project.scripts]
goal = "goal.cli:main"

[project.urls]
Homepage = "https://github.com/wronai/goal"
Repository = "https://github.com/wronai/goal"
Issues = "https://github.com/wronai/goal/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["goal*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["venv", ".venv", "build", "dist", "*.egg-info"]
python_files = ["test_*.py"]
