[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "goal"
version = "2.1.147"
description = "Goal - Automated git push with enterprise-grade commit intelligence, smart conventional commit generation based on deep code analysis, and interactive release workflow management."
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "Tom Sapletta", email = "tom@sapletta.com"},
]
keywords = ["git", "automation", "commit", "changelog", "versioning", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "PyYAML>=6.0",
    "clickmd>=0.1.0",
    "costs>=0.1.12",
]

[project.optional-dependencies]
nfo = [
    "nfo>=0.3.0",
]
dev = [
    "pytest>=7.0.0",
    "build",
    "twine",
]

[project.scripts]
goal = "goal.cli:main"

[project.urls]
Homepage = "https://github.com/wronai/goal"
Repository = "https://github.com/wronai/goal"
Issues = "https://github.com/wronai/goal/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["goal*"]

[tool.costs]
# AI Cost tracking configuration
badge = true
update_readme = true
readme_path = "README.md"
default_model = "openrouter/qwen/qwen3-coder-next"
analysis_mode = "byok"
full_history = true
max_commits = 500

# Cost thresholds for badge colors (USD)
badge_color_thresholds = { low = 1.0, medium = 5.0, high = 10.0, critical = 50.0 }

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["venv", ".venv", "build", "dist", "*.egg-info"]
python_files = ["test_*.py"]

[tool.pfix]
# Self-healing Python configuration
model = "openrouter/qwen/qwen3-coder-next"
auto_apply = true
auto_install_deps = true
auto_restart = false
max_retries = 3
create_backups = false
git_auto_commit = false

[tool.pfix.runtime_todo]
enabled = true
todo_file = "TODO.md"
min_severity = "low"
deduplicate = true
