[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "goal"
version = "2.1.187"
description = "Goal - Automated git push with enterprise-grade commit intelligence, smart conventional commit generation based on deep code analysis, and interactive release workflow management."
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "Tom Sapletta", email = "tom@sapletta.com"},
]
keywords = ["git", "automation", "commit", "changelog", "versioning", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "PyYAML>=6.0",
    "clickmd>=0.1.0",
    "costs>=0.1.21",
]

[project.optional-dependencies]
nfo = [
    "nfo>=0.3.0",
]
dev = [
    "pytest>=7.0.0",
    "build",
    "twine",
    "pfix>=0.1.60",
    "tox>=4.0.0",
]

[project.scripts]
goal = "goal.cli:main"

[project.urls]
Homepage = "https://github.com/wronai/goal"
Repository = "https://github.com/wronai/goal"
Issues = "https://github.com/wronai/goal/issues"

[tool.poetry]
name = "goal"
version = "2.1.158"
description = "Goal - Automated git push with enterprise-grade commit intelligence, smart conventional commit generation based on deep code analysis, and interactive release workflow management."
readme = "README.md"
license = "Apache-2.0"
authors = ["Tom Sapletta <tom@sapletta.com>"]
homepage = "https://github.com/wronai/goal"
repository = "https://github.com/wronai/goal"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.0"
PyYAML = "^6.0"
clickmd = "^0.1.0"
costs = "^0.1.21"

[tool.poetry.group.dev.dependencies]
pytest = ">=7,<9"
build = "*"
twine = "*"
pfix = "^0.1.60"

[tool.poetry.scripts]
goal = "goal.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["goal*"]

[tool.costs]
# AI Cost tracking configuration
badge = true
update_readme = true
readme_path = "README.md"
default_model = "openrouter/x-ai/grok-code-fast-1"
analysis_mode = "byok"
full_history = true
max_commits = 500

# Cost thresholds for badge colors (USD)
badge_color_thresholds = { low = 1.0, medium = 5.0, high = 10.0, critical = 50.0 }

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["venv", ".venv", "build", "dist", "*.egg-info"]
python_files = ["test_*.py"]

[tool.pfix]
# Self-healing Python configuration
model = "openrouter/x-ai/grok-code-fast-1"
auto_apply = true
auto_install_deps = true
auto_restart = false
max_retries = 3
create_backups = false
git_auto_commit = false

[tool.pfix.runtime_todo]
enabled = true
todo_file = "TODO.md"
min_severity = "low"
deduplicate = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38,py39,py310,py311,py312
isolated_build = true

[testenv]
deps =
    pytest>=7.0.0
    build
    twine
    pfix>=0.1.60
extras = nfo
commands = pytest {posargs}

[testenv:lint]
deps =
    pfix>=0.1.60
commands = pfix check {posargs}

[testenv:pyqual]
deps =
    pyqual>=0.2.0
commands = pyqual validate --config pyqual.yaml
"""
