[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "example-python-package"
version = "0.1.0"
description = "Example Python package demonstrating Goal integration"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Example Author", email = "author@example.com"}
]
keywords = ["example", "goal", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov",
    "black",
    "flake8",
    "build",
    "twine",
]

[project.scripts]
example-cli = "example_package.cli:main"

[project.urls]
Homepage = "https://github.com/example/python-package"
Repository = "https://github.com/example/python-package"
Issues = "https://github.com/example/python-package/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["example_package*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
